--- a/heretics.html
+++ b/heretics.html
@@ -10,6 +10,14 @@
 </head>
 
 <body>
+	<div class="overlay third"></div>
+	<div class="overlay second"></div>
+	<div class="overlay firts"></div>
+	<div class="overlay four"></div>
+	<div class="overlay five"></div>
+	<div class="overlay six"></div>
+
+	
 	<header class="header">
 		<div class="header-container _container">
 			<div class="header-body">
@@ -20,7 +28,9 @@
 				</div>
 
 				<div class="header-wrapper">
-					<div class="header-btn">Главная</div>
+					<a href="/index.html">
+						<div class="header-btn">Главная</div>
+					</a>
 					<div class="header-btn">Расписание</div>
 				</div>
 
@@ -50,6 +60,52 @@
 			</div>
 		</div>
 	</section>
+
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.4/gsap.min.js"
+	integrity="sha512-VEBjfxWUOyzl0bAwh4gdLEaQyDYPvLrZql3pw1ifgb6fhEvZl9iDDehwHZ+dsMzA0Jfww8Xt7COSZuJ/slxc4Q=="
+	crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+<script>
+	TweenMax.to('.overlay-logo', 1.5, {
+		delay: 0,
+		y: 0,
+		ease: Expo.easeInOut
+	})
+	TweenMax.to('.overlay-logo', 1.5, {
+		delay: 2,
+		y: -100,
+		ease: Expo.easeInOut
+	})
+	TweenMax.to('.firts', 1.5, {
+		delay: .7,
+		height: "0%",
+		ease: Expo.easeInOut
+	})
+	TweenMax.to('.second', 1.5, {
+		delay: .9,
+		height: "0%",
+		ease: Expo.easeInOut
+	})
+	TweenMax.to('.third', 1.5, {
+		delay: 1.1,
+		height: "0%",
+		ease: Expo.easeInOut
+	})
+	TweenMax.to('.four', 1.5, {
+		delay: 1.3,
+		height: "0%",
+		ease: Expo.easeInOut
+	})
+	TweenMax.to('.five', 1.5, {
+		delay: 1.5,
+		height: "0%",
+		ease: Expo.easeInOut
+	})
+	TweenMax.to('.six', 1.5, {
+		delay: 1.7,
+		height: "0%",
+		ease: Expo.easeInOut
+	})
+</script>
 </body>
 
 </html>
