--- a/index.html
+++ b/index.html
@@ -10,6 +10,13 @@
 </head>
 
 <body>
+	<div class="overlay third"></div>
+	<div class="overlay second"></div>
+	<div class="overlay firts"></div>
+	<div class="overlay four"></div>
+	<div class="overlay five"></div>
+	<div class="overlay six"></div>
+
 	<header class="header">
 		<div class="header-container _container">
 			<div class="header-body">
@@ -24,7 +31,9 @@
 
 				<div class="header-wrapper">
 					<div class="header-btn">Главная</div>
-					<div class="header-btn">Расписание</div>
+					<a href="/heretics.html">
+						<div class="header-btn">Расписание</div>
+					</a>
 				</div>
 
 			</div>
@@ -33,14 +42,14 @@
 
 	<section class="main">
 		<div class="main-container _container">
-			<div class="main-body">
-				<div class="main-wrapper">
+			<div class="main-body-fr">
+				<div class="main-block-wrapper">
 					<div class="main-title">Портфолио
 						группы <span>ИСиП-20</span></div>
 					<div class="main-text">Наша группа специализируется на создании отзывчивых веб-сайтов и мобильных
 						приложений для контента, сообщества, коммерции и культуры.</div>
 				</div>
-				<div class="main-wrapper">
+				<div class="main-block-wrapper">
 					<img src="source/main-01.jpg">
 				</div>
 				<div class="main-wrapper">
@@ -51,6 +60,52 @@
 			</div>
 		</div>
 	</section>
+
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.4/gsap.min.js"
+		integrity="sha512-VEBjfxWUOyzl0bAwh4gdLEaQyDYPvLrZql3pw1ifgb6fhEvZl9iDDehwHZ+dsMzA0Jfww8Xt7COSZuJ/slxc4Q=="
+		crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+	<script>
+		TweenMax.to('.overlay-logo', 1.5, {
+			delay: 0,
+			y: 0,
+			ease: Expo.easeInOut
+		})
+		TweenMax.to('.overlay-logo', 1.5, {
+			delay: 2,
+			y: -100,
+			ease: Expo.easeInOut
+		})
+		TweenMax.to('.firts', 1.5, {
+			delay: .7,
+			height: "0%",
+			ease: Expo.easeInOut
+		})
+		TweenMax.to('.second', 1.5, {
+			delay: .9,
+			height: "0%",
+			ease: Expo.easeInOut
+		})
+		TweenMax.to('.third', 1.5, {
+			delay: 1.1,
+			height: "0%",
+			ease: Expo.easeInOut
+		})
+		TweenMax.to('.four', 1.5, {
+			delay: 1.3,
+			height: "0%",
+			ease: Expo.easeInOut
+		})
+		TweenMax.to('.five', 1.5, {
+			delay: 1.5,
+			height: "0%",
+			ease: Expo.easeInOut
+		})
+		TweenMax.to('.six', 1.5, {
+			delay: 1.7,
+			height: "0%",
+			ease: Expo.easeInOut
+		})
+	</script>
 </body>
 
 </html>
