--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 		</div>
 	</header>
 
-	<section class="main">
+	<section class="main" id="main">
 		<div class="main-container _container">
 			<div class="main-body-fr">
 				<div class="main-block-wrapper">
@@ -54,12 +54,199 @@
 				</div>
 				<div class="main-wrapper">
 					<div class="main-arrow">
-						<img src="source/main-arrow.svg">
+						<a href="#heretics"><img src="source/main-arrow.svg"></a>
 					</div>
 				</div>
 			</div>
 		</div>
 	</section>
+
+	<section class="heretics" id="heretics">
+		<div class="heretics-container _container">
+			<div class="heretics-wrapper">
+				<div class="heretics-title">Наши люди</div>
+			</div>
+			<div class="heretics-block-item">
+				<div class="heretics-item-wrapper">
+					<div class="heretics-item">
+						<div class="heretics-ava"></div>
+						<div class="heretics-text">Вадим Иванов В.</div>
+						<div class="heretics-text">Techlead</div>
+						<div class="heretics-text text-org">+7 (999)-244-90-51</div>
+						<div class="heretics-text text-org">vadimivanov565@gmail.com</div>
+					</div>
+					<div class="heretics-item">
+						<div class="heretics-ava"></div>
+						<div class="heretics-text">Вадим Иванов В.</div>
+						<div class="heretics-text">Techlead</div>
+						<div class="heretics-text text-org">+7 (999)-244-90-51</div>
+						<div class="heretics-text text-org">vadimivanov565@gmail.com</div>
+					</div>
+					<div class="heretics-item">
+						<div class="heretics-ava"></div>
+						<div class="heretics-text">Вадим Иванов В.</div>
+						<div class="heretics-text">Techlead</div>
+						<div class="heretics-text text-org">+7 (999)-244-90-51</div>
+						<div class="heretics-text text-org">vadimivanov565@gmail.com</div>
+					</div>
+					<div class="heretics-item">
+						<div class="heretics-ava"></div>
+						<div class="heretics-text">Вадим Иванов В.</div>
+						<div class="heretics-text">Techlead</div>
+						<div class="heretics-text text-org">+7 (999)-244-90-51</div>
+						<div class="heretics-text text-org">vadimivanov565@gmail.com</div>
+					</div>
+					<div class="heretics-item">
+						<div class="heretics-ava"></div>
+						<div class="heretics-text">Вадим Иванов В.</div>
+						<div class="heretics-text">Techlead</div>
+						<div class="heretics-text text-org">+7 (999)-244-90-51</div>
+						<div class="heretics-text text-org">vadimivanov565@gmail.com</div>
+					</div>
+				</div>
+				<div class="heretics-item-wrapper">
+					<div class="heretics-item">
+						<div class="heretics-ava"></div>
+						<div class="heretics-text">Вадим Иванов В.</div>
+						<div class="heretics-text">Techlead</div>
+						<div class="heretics-text text-org">+7 (999)-244-90-51</div>
+						<div class="heretics-text text-org">vadimivanov565@gmail.com</div>
+					</div>
+					<div class="heretics-item">
+						<div class="heretics-ava"></div>
+						<div class="heretics-text">Вадим Иванов В.</div>
+						<div class="heretics-text">Techlead</div>
+						<div class="heretics-text text-org">+7 (999)-244-90-51</div>
+						<div class="heretics-text text-org">vadimivanov565@gmail.com</div>
+					</div>
+					<div class="heretics-item">
+						<div class="heretics-ava"></div>
+						<div class="heretics-text">Вадим Иванов В.</div>
+						<div class="heretics-text">Techlead</div>
+						<div class="heretics-text text-org">+7 (999)-244-90-51</div>
+						<div class="heretics-text text-org">vadimivanov565@gmail.com</div>
+					</div>
+					<div class="heretics-item">
+						<div class="heretics-ava"></div>
+						<div class="heretics-text">Вадим Иванов В.</div>
+						<div class="heretics-text">Techlead</div>
+						<div class="heretics-text text-org">+7 (999)-244-90-51</div>
+						<div class="heretics-text text-org">vadimivanov565@gmail.com</div>
+					</div>
+					<div class="heretics-item">
+						<div class="heretics-ava"></div>
+						<div class="heretics-text">Вадим Иванов В.</div>
+						<div class="heretics-text">Techlead</div>
+						<div class="heretics-text text-org">+7 (999)-244-90-51</div>
+						<div class="heretics-text text-org">vadimivanov565@gmail.com</div>
+					</div>
+				</div>
+				<div class="heretics-item-wrapper">
+					<div class="heretics-item">
+						<div class="heretics-ava"></div>
+						<div class="heretics-text">Вадим Иванов В.</div>
+						<div class="heretics-text">Techlead</div>
+						<div class="heretics-text text-org">+7 (999)-244-90-51</div>
+						<div class="heretics-text text-org">vadimivanov565@gmail.com</div>
+					</div>
+					<div class="heretics-item">
+						<div class="heretics-ava"></div>
+						<div class="heretics-text">Вадим Иванов В.</div>
+						<div class="heretics-text">Techlead</div>
+						<div class="heretics-text text-org">+7 (999)-244-90-51</div>
+						<div class="heretics-text text-org">vadimivanov565@gmail.com</div>
+					</div>
+					<div class="heretics-item">
+						<div class="heretics-ava"></div>
+						<div class="heretics-text">Вадим Иванов В.</div>
+						<div class="heretics-text">Techlead</div>
+						<div class="heretics-text text-org">+7 (999)-244-90-51</div>
+						<div class="heretics-text text-org">vadimivanov565@gmail.com</div>
+					</div>
+					<div class="heretics-item">
+						<div class="heretics-ava"></div>
+						<div class="heretics-text">Вадим Иванов В.</div>
+						<div class="heretics-text">Techlead</div>
+						<div class="heretics-text text-org">+7 (999)-244-90-51</div>
+						<div class="heretics-text text-org">vadimivanov565@gmail.com</div>
+					</div>
+					<div class="heretics-item">
+						<div class="heretics-ava"></div>
+						<div class="heretics-text">Вадим Иванов В.</div>
+						<div class="heretics-text">Techlead</div>
+						<div class="heretics-text text-org">+7 (999)-244-90-51</div>
+						<div class="heretics-text text-org">vadimivanov565@gmail.com</div>
+					</div>
+				</div>
+				<div class="heretics-item-wrapper">
+					<div class="heretics-item">
+						<div class="heretics-ava"></div>
+						<div class="heretics-text">Вадим Иванов В.</div>
+						<div class="heretics-text">Techlead</div>
+						<div class="heretics-text text-org">+7 (999)-244-90-51</div>
+						<div class="heretics-text text-org">vadimivanov565@gmail.com</div>
+					</div>
+					<div class="heretics-item">
+						<div class="heretics-ava"></div>
+						<div class="heretics-text">Вадим Иванов В.</div>
+						<div class="heretics-text">Techlead</div>
+						<div class="heretics-text text-org">+7 (999)-244-90-51</div>
+						<div class="heretics-text text-org">vadimivanov565@gmail.com</div>
+					</div>
+					<div class="heretics-item">
+						<div class="heretics-ava"></div>
+						<div class="heretics-text">Вадим Иванов В.</div>
+						<div class="heretics-text">Techlead</div>
+						<div class="heretics-text text-org">+7 (999)-244-90-51</div>
+						<div class="heretics-text text-org">vadimivanov565@gmail.com</div>
+					</div>
+					<div class="heretics-item">
+						<div class="heretics-ava"></div>
+						<div class="heretics-text">Вадим Иванов В.</div>
+						<div class="heretics-text">Techlead</div>
+						<div class="heretics-text text-org">+7 (999)-244-90-51</div>
+						<div class="heretics-text text-org">vadimivanov565@gmail.com</div>
+					</div>
+					<div class="heretics-item">
+						<div class="heretics-ava"></div>
+						<div class="heretics-text">Вадим Иванов В.</div>
+						<div class="heretics-text">Techlead</div>
+						<div class="heretics-text text-org">+7 (999)-244-90-51</div>
+						<div class="heretics-text text-org">vadimivanov565@gmail.com</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+
+	<footer class="footer" id="footer">
+		<div class="footer-container _container">
+			<div class="footer-body">
+				<div class="footer-main-wrapper">
+					<div class="footer-main-title">
+						Связаться с нами
+						<span><img src="/source/footer-arrow.svg"></span>
+					</div>
+				</div>
+				<div class="footer-wrapper">
+					<div class="footer-block">
+						<div class="footer-title">Контакты</div>
+						<div class="footer-text">Ул. Братья Ксенофонтовых, 31</div>
+						<div class="footer-text">РС(Я), г. Покровск.</div>
+						<div class="footer-text">vadimivanov56532@gmail.com</div>
+						<div class="footer-text">+7 999 244-90-51</div>
+						<div class="footer-logo">ИСиП-20</div>
+					</div>
+					<div class="footer-block">
+						<div class="footer-title">Подпишись</div>
+						<div class="footer-text footer-social">Instagram</div>
+						<div class="footer-text footer-social">Vkontakte</div>
+					</div>
+				</div>
+				<div class="footer-copyright">ИСиП — © 2022</div>
+			</div>
+		</div>
+	</footer>
 
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.4/gsap.min.js"
 		integrity="sha512-VEBjfxWUOyzl0bAwh4gdLEaQyDYPvLrZql3pw1ifgb6fhEvZl9iDDehwHZ+dsMzA0Jfww8Xt7COSZuJ/slxc4Q=="
@@ -104,6 +291,14 @@
 			delay: 1.7,
 			height: "0%",
 			ease: Expo.easeInOut
+		})
+	</script>
+
+	<script>
+		const header = document.querySelector('header');
+
+		window.addEventListener('scroll', () => {
+			header.classList.toggle('sticky', window.pageYOffset > 50)
 		})
 	</script>
 </body>
