--- a/heretics-01.html
+++ b/heretics-01.html
@@ -17,14 +17,16 @@
 	<div class="overlay five"></div>
 	<div class="overlay six"></div>
 
-	
+
 	<header class="header">
 		<div class="header-container _container">
 			<div class="header-body">
 
 				<div class="header-wrapper">
-					<div class="header-logo-template">LOGO</div>
-					<div class="header-descriptions">UI/UX & Brand Designer</div>
+					<div class="header-logo-template">
+						<a href="index.html">ИСиП-20</a>
+					</div>
+					<div class="header-descriptions">ГБПОУ “Покровский колледж”</div>
 				</div>
 
 				<div class="header-wrapper">
@@ -47,65 +49,69 @@
 					</div>
 					<div class="main-wrapper">
 						<div class="main-img-template">
-							<img class="img-template" src="source/main-image-template.jpg">
+							<img class="img-template" src="source/heretic-01.jpg">
 						</div>
 					</div>
 				</div>
 				<div class="main-wrapper">
 					<div class="main-text-1">Василий Кононов - дизайнер-самоучка с более чем 2-летним опытом работы с
 						дизайном сайтов, приложений и айдентикой / графическим дизайном.</div>
-					<div class="main-text-2">+7 (914) 278-01-05</div>
-					<div class="main-text-3">joyboy.tec@gmail.com</div>
+					<div class="main-text-2">
+						<a href="tel:+79142780105" class="tel">+7 (914) 278-01-05</a>
+					</div>
+					<div class="main-text-3">
+						<a href="mailto:joyboy.tec@gmail.com" class="mail">joyboy.tec@gmail.com</a>
+					</div>
 				</div>
 			</div>
 		</div>
 	</section>
 
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.4/gsap.min.js"
-	integrity="sha512-VEBjfxWUOyzl0bAwh4gdLEaQyDYPvLrZql3pw1ifgb6fhEvZl9iDDehwHZ+dsMzA0Jfww8Xt7COSZuJ/slxc4Q=="
-	crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-<script>
-	TweenMax.to('.overlay-logo', 1.5, {
-		delay: 0,
-		y: 0,
-		ease: Expo.easeInOut
-	})
-	TweenMax.to('.overlay-logo', 1.5, {
-		delay: 2,
-		y: -100,
-		ease: Expo.easeInOut
-	})
-	TweenMax.to('.firts', 1.5, {
-		delay: .7,
-		height: "0%",
-		ease: Expo.easeInOut
-	})
-	TweenMax.to('.second', 1.5, {
-		delay: .9,
-		height: "0%",
-		ease: Expo.easeInOut
-	})
-	TweenMax.to('.third', 1.5, {
-		delay: 1.1,
-		height: "0%",
-		ease: Expo.easeInOut
-	})
-	TweenMax.to('.four', 1.5, {
-		delay: 1.3,
-		height: "0%",
-		ease: Expo.easeInOut
-	})
-	TweenMax.to('.five', 1.5, {
-		delay: 1.5,
-		height: "0%",
-		ease: Expo.easeInOut
-	})
-	TweenMax.to('.six', 1.5, {
-		delay: 1.7,
-		height: "0%",
-		ease: Expo.easeInOut
-	})
-</script>
+		integrity="sha512-VEBjfxWUOyzl0bAwh4gdLEaQyDYPvLrZql3pw1ifgb6fhEvZl9iDDehwHZ+dsMzA0Jfww8Xt7COSZuJ/slxc4Q=="
+		crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+	<script>
+		TweenMax.to('.overlay-logo', 1.5, {
+			delay: 0,
+			y: 0,
+			ease: Expo.easeInOut
+		})
+		TweenMax.to('.overlay-logo', 1.5, {
+			delay: 2,
+			y: -100,
+			ease: Expo.easeInOut
+		})
+		TweenMax.to('.firts', 1.5, {
+			delay: .7,
+			height: "0%",
+			ease: Expo.easeInOut
+		})
+		TweenMax.to('.second', 1.5, {
+			delay: .9,
+			height: "0%",
+			ease: Expo.easeInOut
+		})
+		TweenMax.to('.third', 1.5, {
+			delay: 1.1,
+			height: "0%",
+			ease: Expo.easeInOut
+		})
+		TweenMax.to('.four', 1.5, {
+			delay: 1.3,
+			height: "0%",
+			ease: Expo.easeInOut
+		})
+		TweenMax.to('.five', 1.5, {
+			delay: 1.5,
+			height: "0%",
+			ease: Expo.easeInOut
+		})
+		TweenMax.to('.six', 1.5, {
+			delay: 1.7,
+			height: "0%",
+			ease: Expo.easeInOut
+		})
+	</script>
 </body>
 
 </html>
