--- a/index.html
+++ b/index.html
@@ -30,9 +30,14 @@
 				</div>
 
 				<div class="header-wrapper">
-					<div class="header-btn">Главная</div>
-					<a href="/heretics.html">
-						<div class="header-btn">Расписание</div>
+					<a href="#main">
+						<div class="header-btn">Главная</div>
+					</a>
+					<a href="#heretics">
+						<div class="header-btn">Команда</div>
+					</a>
+					<a href="#footer">
+						<div class="header-btn">Контакты</div>
 					</a>
 				</div>
 
@@ -69,150 +74,190 @@
 			<div class="heretics-block-item">
 				<div class="heretics-item-wrapper">
 					<div class="heretics-item">
-						<div class="heretics-ava"></div>
-						<div class="heretics-text">Вадим Иванов В.</div>
-						<div class="heretics-text">Techlead</div>
-						<div class="heretics-text text-org">+7 (999)-244-90-51</div>
-						<div class="heretics-text text-org">vadimivanov565@gmail.com</div>
+						<a href="heretics-01.html">
+							<div class="heretics-ava"></div>
+						</a>
+						<div class="heretics-text">Василий Кононов</div>
+						<div class="heretics-text">Teamlead</div>
+						<div class="heretics-text text-org">+7 (914) 278-01-05</div>
+						<div class="heretics-text text-org">joyboy.tec@gmail.com</div>
 					</div>
 					<div class="heretics-item">
-						<div class="heretics-ava"></div>
-						<div class="heretics-text">Вадим Иванов В.</div>
-						<div class="heretics-text">Techlead</div>
-						<div class="heretics-text text-org">+7 (999)-244-90-51</div>
-						<div class="heretics-text text-org">vadimivanov565@gmail.com</div>
+						<a href="heretics-02.html">
+							<div class="heretics-ava"></div>
+						</a>
+						<div class="heretics-text">Вячеслав Сивцев</div>
+						<div class="heretics-text">DevOps</div>
+						<div class="heretics-text text-org">-</div>
+						<div class="heretics-text text-org">-</div>
 					</div>
 					<div class="heretics-item">
-						<div class="heretics-ava"></div>
-						<div class="heretics-text">Вадим Иванов В.</div>
-						<div class="heretics-text">Techlead</div>
-						<div class="heretics-text text-org">+7 (999)-244-90-51</div>
-						<div class="heretics-text text-org">vadimivanov565@gmail.com</div>
+						<a href="heretics-03.html">
+							<div class="heretics-ava"></div>
+						</a>
+						<div class="heretics-text">Слава Тоскин</div>
+						<div class="heretics-text">3D-Generalist</div>
+						<div class="heretics-text text-org">+7 (914) 281-39-65</div>
+						<div class="heretics-text text-org">slavatoskin000@gmail.com</div>
 					</div>
 					<div class="heretics-item">
-						<div class="heretics-ava"></div>
-						<div class="heretics-text">Вадим Иванов В.</div>
-						<div class="heretics-text">Techlead</div>
-						<div class="heretics-text text-org">+7 (999)-244-90-51</div>
-						<div class="heretics-text text-org">vadimivanov565@gmail.com</div>
+						<a href="heretics-04.html">
+							<div class="heretics-ava"></div>
+						</a>
+						<div class="heretics-text">Антон Мазинцев</div>
+						<div class="heretics-text">3D-Generalist</div>
+						<div class="heretics-text text-org">+7 (914) 263-17-28</div>
+						<div class="heretics-text text-org">mazana2611@gmail.com</div>
 					</div>
 					<div class="heretics-item">
-						<div class="heretics-ava"></div>
-						<div class="heretics-text">Вадим Иванов В.</div>
-						<div class="heretics-text">Techlead</div>
-						<div class="heretics-text text-org">+7 (999)-244-90-51</div>
-						<div class="heretics-text text-org">vadimivanov565@gmail.com</div>
-					</div>
-				</div>
-				<div class="heretics-item-wrapper">
-					<div class="heretics-item">
-						<div class="heretics-ava"></div>
-						<div class="heretics-text">Вадим Иванов В.</div>
-						<div class="heretics-text">Techlead</div>
-						<div class="heretics-text text-org">+7 (999)-244-90-51</div>
-						<div class="heretics-text text-org">vadimivanov565@gmail.com</div>
-					</div>
-					<div class="heretics-item">
-						<div class="heretics-ava"></div>
-						<div class="heretics-text">Вадим Иванов В.</div>
-						<div class="heretics-text">Techlead</div>
-						<div class="heretics-text text-org">+7 (999)-244-90-51</div>
-						<div class="heretics-text text-org">vadimivanov565@gmail.com</div>
-					</div>
-					<div class="heretics-item">
-						<div class="heretics-ava"></div>
-						<div class="heretics-text">Вадим Иванов В.</div>
-						<div class="heretics-text">Techlead</div>
-						<div class="heretics-text text-org">+7 (999)-244-90-51</div>
-						<div class="heretics-text text-org">vadimivanov565@gmail.com</div>
-					</div>
-					<div class="heretics-item">
-						<div class="heretics-ava"></div>
-						<div class="heretics-text">Вадим Иванов В.</div>
-						<div class="heretics-text">Techlead</div>
-						<div class="heretics-text text-org">+7 (999)-244-90-51</div>
-						<div class="heretics-text text-org">vadimivanov565@gmail.com</div>
-					</div>
-					<div class="heretics-item">
-						<div class="heretics-ava"></div>
-						<div class="heretics-text">Вадим Иванов В.</div>
-						<div class="heretics-text">Techlead</div>
-						<div class="heretics-text text-org">+7 (999)-244-90-51</div>
-						<div class="heretics-text text-org">vadimivanov565@gmail.com</div>
+						<a href="heretics-05.html">
+							<div class="heretics-ava"></div>
+						</a>
+						<div class="heretics-text">Роман Широких</div>
+						<div class="heretics-text">Backend Developer</div>
+						<div class="heretics-text text-org">-</div>
+						<div class="heretics-text text-org">-</div>
 					</div>
 				</div>
 				<div class="heretics-item-wrapper">
 					<div class="heretics-item">
-						<div class="heretics-ava"></div>
-						<div class="heretics-text">Вадим Иванов В.</div>
-						<div class="heretics-text">Techlead</div>
+						<a href="heretics-06.html">
+							<div class="heretics-ava"></div>
+						</a>
+						<div class="heretics-text">Вадим Иванов</div>
+						<div class="heretics-text">Frontend Developer</div>
 						<div class="heretics-text text-org">+7 (999)-244-90-51</div>
 						<div class="heretics-text text-org">vadimivanov565@gmail.com</div>
 					</div>
 					<div class="heretics-item">
-						<div class="heretics-ava"></div>
-						<div class="heretics-text">Вадим Иванов В.</div>
-						<div class="heretics-text">Techlead</div>
-						<div class="heretics-text text-org">+7 (999)-244-90-51</div>
-						<div class="heretics-text text-org">vadimivanov565@gmail.com</div>
+						<a href="heretics-07.html">
+							<div class="heretics-ava"></div>
+						</a>
+						<div class="heretics-text">Александр Корякин</div>
+						<div class="heretics-text">UI Designer</div>
+						<div class="heretics-text text-org">+7 (999)-174-27-08</div>
+						<div class="heretics-text text-org">koryakinsasha21@gmail.com</div>
 					</div>
 					<div class="heretics-item">
-						<div class="heretics-ava"></div>
-						<div class="heretics-text">Вадим Иванов В.</div>
-						<div class="heretics-text">Techlead</div>
-						<div class="heretics-text text-org">+7 (999)-244-90-51</div>
-						<div class="heretics-text text-org">vadimivanov565@gmail.com</div>
+						<a href="heretics-08.html">
+							<div class="heretics-ava"></div>
+						</a>
+						<div class="heretics-text">Дмитрий Иванов</div>
+						<div class="heretics-text">Frontend Developer</div>
+						<div class="heretics-text text-org">+7 (967) 914-78-68</div>
+						<div class="heretics-text text-org">dima.nickolaew.69@gmail.com</div>
 					</div>
 					<div class="heretics-item">
-						<div class="heretics-ava"></div>
-						<div class="heretics-text">Вадим Иванов В.</div>
-						<div class="heretics-text">Techlead</div>
-						<div class="heretics-text text-org">+7 (999)-244-90-51</div>
-						<div class="heretics-text text-org">vadimivanov565@gmail.com</div>
+						<a href="heretics-09.html">
+							<div class="heretics-ava"></div>
+						</a>
+						<div class="heretics-text">Марк Иванов</div>
+						<div class="heretics-text">Frontend Developer</div>
+						<div class="heretics-text text-org">+7 (999) 173-63-32</div>
+						<div class="heretics-text text-org">qjix_box_@mail.ru</div>
 					</div>
 					<div class="heretics-item">
-						<div class="heretics-ava"></div>
-						<div class="heretics-text">Вадим Иванов В.</div>
-						<div class="heretics-text">Techlead</div>
-						<div class="heretics-text text-org">+7 (999)-244-90-51</div>
-						<div class="heretics-text text-org">vadimivanov565@gmail.com</div>
+						<a href="heretics-10.html">
+							<div class="heretics-ava"></div>
+						</a>
+						<div class="heretics-text">Валерий Кылтасов</div>
+						<div class="heretics-text">Main Frontend Developer</div>
+						<div class="heretics-text text-org">+7 (924) 363-40-29</div>
+						<div class="heretics-text text-org">kyltasovva@gmail.com</div>
 					</div>
 				</div>
 				<div class="heretics-item-wrapper">
 					<div class="heretics-item">
-						<div class="heretics-ava"></div>
-						<div class="heretics-text">Вадим Иванов В.</div>
-						<div class="heretics-text">Techlead</div>
-						<div class="heretics-text text-org">+7 (999)-244-90-51</div>
-						<div class="heretics-text text-org">vadimivanov565@gmail.com</div>
+						<a href="heretics-11.html">
+							<div class="heretics-ava"></div>
+						</a>
+						<div class="heretics-text">Иванов Николай</div>
+						<div class="heretics-text">Backend Developer</div>
+						<div class="heretics-text text-org">+7 (962) 735-94-82</div>
+						<div class="heretics-text text-org">ik9973543@gmail.com</div>
 					</div>
 					<div class="heretics-item">
-						<div class="heretics-ava"></div>
-						<div class="heretics-text">Вадим Иванов В.</div>
-						<div class="heretics-text">Techlead</div>
-						<div class="heretics-text text-org">+7 (999)-244-90-51</div>
-						<div class="heretics-text text-org">vadimivanov565@gmail.com</div>
+						<a href="heretics-12.html">
+							<div class="heretics-ava"></div>
+						</a>
+						<div class="heretics-text">Александра Андросова</div>
+						<div class="heretics-text">Project Manager</div>
+						<div class="heretics-text text-org">+7 (914) 280-61-71</div>
+						<div class="heretics-text text-org">-</div>
 					</div>
 					<div class="heretics-item">
-						<div class="heretics-ava"></div>
-						<div class="heretics-text">Вадим Иванов В.</div>
-						<div class="heretics-text">Techlead</div>
-						<div class="heretics-text text-org">+7 (999)-244-90-51</div>
-						<div class="heretics-text text-org">vadimivanov565@gmail.com</div>
+						<a href="heretics-13.html">
+							<div class="heretics-ava"></div>
+						</a>
+						<div class="heretics-text">Виталий Архипов</div>
+						<div class="heretics-text">Frontend Developer</div>
+						<div class="heretics-text text-org">+7 (914) 280-61-71</div>
+						<div class="heretics-text text-org">valarhip1@gmail.com</div>
 					</div>
 					<div class="heretics-item">
-						<div class="heretics-ava"></div>
-						<div class="heretics-text">Вадим Иванов В.</div>
-						<div class="heretics-text">Techlead</div>
-						<div class="heretics-text text-org">+7 (999)-244-90-51</div>
-						<div class="heretics-text text-org">vadimivanov565@gmail.com</div>
+						<a href="heretics-14.html">
+							<div class="heretics-ava"></div>
+						</a>
+						<div class="heretics-text">Юрий Гуляев</div>
+						<div class="heretics-text">Frontend Developer</div>
+						<div class="heretics-text text-org">+7 (965) 993-65-23</div>
+						<div class="heretics-text text-org">gulaevura3@gmail.com</div>
 					</div>
 					<div class="heretics-item">
-						<div class="heretics-ava"></div>
-						<div class="heretics-text">Вадим Иванов В.</div>
-						<div class="heretics-text">Techlead</div>
-						<div class="heretics-text text-org">+7 (999)-244-90-51</div>
-						<div class="heretics-text text-org">vadimivanov565@gmail.com</div>
+						<a href="heretics-15.html">
+							<div class="heretics-ava"></div>
+						</a>
+						<div class="heretics-text">Федот Дмитриев</div>
+						<div class="heretics-text">3D-Generalist</div>
+						<div class="heretics-text text-org">+7 (924) 360-53-84</div>
+						<div class="heretics-text text-org">fedman313@gmail.com</div>
+					</div>
+				</div>
+				<div class="heretics-item-wrapper">
+					<div class="heretics-item">
+						<a href="heretics-16.html">
+							<div class="heretics-ava"></div>
+						</a>
+						<div class="heretics-text">Алексей Никулин</div>
+						<div class="heretics-text">Frontend Developer</div>
+						<div class="heretics-text text-org">+7 (999) 173-74-32</div>
+						<div class="heretics-text text-org">nikalenlesa@gmail.com</div>
+					</div>
+					<div class="heretics-item">
+						<a href="heretics-17.html">
+							<div class="heretics-ava"></div>
+						</a>
+						<div class="heretics-text">Николай Иванов</div>
+						<div class="heretics-text">Main Frontend Developer</div>
+						<div class="heretics-text text-org">+7(914)-104-32-20</div>
+						<div class="heretics-text text-org">uybanuobnuk@gmail.com</div>
+					</div>
+					<div class="heretics-item">
+						<a href="#">
+							<div class="heretics-ava"></div>
+						</a>
+						<div class="heretics-text">-</div>
+						<div class="heretics-text"></div>
+						<div class="heretics-text text-org"></div>
+						<div class="heretics-text text-org"></div>
+					</div>
+					<div class="heretics-item">
+						<a href="#">
+							<div class="heretics-ava"></div>
+						</a>
+						<div class="heretics-text">-</div>
+						<div class="heretics-text"></div>
+						<div class="heretics-text text-org"></div>
+						<div class="heretics-text text-org"></div>
+					</div>
+					<div class="heretics-item">
+						<a href="#">
+							<div class="heretics-ava"></div>
+						</a>
+						<div class="heretics-text">-</div>
+						<div class="heretics-text"></div>
+						<div class="heretics-text text-org"></div>
+						<div class="heretics-text text-org"></div>
 					</div>
 				</div>
 			</div>
@@ -223,10 +268,12 @@
 		<div class="footer-container _container">
 			<div class="footer-body">
 				<div class="footer-main-wrapper">
-					<div class="footer-main-title">
-						Связаться с нами
-						<span><img src="/source/footer-arrow.svg"></span>
-					</div>
+					<a href="mailto:joyboy.tec@gmail.com">
+						<div class="footer-main-title">
+							Связаться с нами
+							<span><img src="/source/footer-arrow.svg"></span>
+						</div>
+					</a>
 				</div>
 				<div class="footer-wrapper">
 					<div class="footer-block">
